# homework2lark

./: .env.example  .gitattributes  .gitignore  AI_INSTALL.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase_one_schema.py  0002_region_detection_and_batch_selection.py  0003_multi_candidate_problem_lineage.py  0004_problem_publications.py  0005_problem_assets_without_review_state.py
apps/api/scripts/: benchmark_yescan_detection.py  export_openapi.py  start_e2e.py
apps/api/src/mistake_notebook_api/: __init__.py  config.py  main.py
apps/api/src/mistake_notebook_api/api/: __init__.py  errors.py  middleware.py  routes.py  runtime.py  schemas.py
apps/api/src/mistake_notebook_api/application/: detection_service.py  images.py  ports.py  publication_service.py  records.py  services.py
apps/api/src/mistake_notebook_api/domain/: __init__.py  detection.py  entities.py  enums.py  errors.py  geometry.py  identifiers.py  ocr.py  publication.py  storage.py  (+1 more)
apps/api/tests/: conftest.py
apps/api/tests/contract/: test_ocr_providers.py  test_openapi.py  test_paddleocr_vl_api_provider.py  test_problem_publishers.py  test_region_detection_providers.py  test_runtime_composition.py  test_storage.py
apps/api/tests/integration/: test_error_privacy.py  test_full_flow.py  test_migration.py  test_problem_publication.py  test_region_selection_flow.py
apps/api/tests/live/: test_paddleocr_vl_api_live.py
apps/api/tests/support/: detection.py  ocr.py  publication.py
apps/api/tests/unit/: test_images.py  test_review_rules.py
(+147 files in other folders)
