[project]
name = "mistake-notebook-api"
version = "0.1.0"
description = "Phase 1 API for teacher-confirmed elementary mathematics problem assets"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.135,<1",
  "pillow>=11,<13",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "requests>=2.32,<3",
  "sqlalchemy>=2.0.40,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
paddleocr = [
  "paddleocr>=3.3,<4",
  "paddlepaddle>=3.0,<4",
]

[dependency-groups]
dev = [
  "httpx2>=2.5,<3",
  "mypy>=1.18,<2",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.14,<1",
  "types-requests>=2.32,<3",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["src/mistake_notebook_api"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["live: explicitly authorized test against a real external service"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001"] # Chinese teacher-facing copy intentionally uses CJK punctuation.

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["paddleocr", "paddleocr.*", "numpy", "numpy.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
